// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The CommercialCanaries stack matches the Australia CODE snapshot 1`] = `
Object {
  "Metadata": Object {
    "gu:cdk:constructs": Array [],
    "gu:cdk:version": "TEST",
  },
  "Parameters": Object {
    "BuildId": Object {
      "Description": "The riff-raff build id, automatically generated and provided by riff-raff",
      "Type": "String",
    },
  },
  "Resources": Object {
    "AlarmCODE09E73206": Object {
      "Properties": Object {
        "ActionsEnabled": true,
        "AlarmActions": Array [
          Object {
            "Ref": "TopicCODEapsoutheast2E8902FA1",
          },
        ],
        "AlarmDescription": "Either a Front or an Article CMP has failed in ap-southeast-2",
        "AlarmName": "commercial-canary-CODE-ap-southeast-2",
        "ComparisonOperator": "LessThanOrEqualToThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": Array [
          Object {
            "Name": "CanaryName",
            "Value": "comm_cmp_canary_code",
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "SuccessPercent",
        "Namespace": "CloudWatchSynthetics",
        "OKActions": Array [
          Object {
            "Ref": "TopicCODEapsoutheast2E8902FA1",
          },
        ],
        "Period": 60,
        "Statistic": "Average",
        "Threshold": 80,
        "TreatMissingData": "breaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "Canary": Object {
      "Properties": Object {
        "ArtifactS3Location": Object {
          "Fn::Join": Array [
            "",
            Array [
              "s3://cw-syn-results-",
              Object {
                "Ref": "AWS::AccountId",
              },
              "-ap-southeast-2/CODE",
            ],
          ],
        },
        "Code": Object {
          "Handler": "pageLoadBlueprint.handler",
          "S3Bucket": Object {
            "Fn::Join": Array [
              "",
              Array [
                "cw-syn-canary-",
                Object {
                  "Ref": "AWS::AccountId",
                },
                "-ap-southeast-2",
              ],
            ],
          },
          "S3Key": "CODE/nodejs.zip",
        },
        "DeleteLambdaResourcesOnCanaryDeletion": true,
        "ExecutionRoleArn": Object {
          "Fn::GetAtt": Array [
            "Role1ABCC5F0",
            "Arn",
          ],
        },
        "FailureRetentionPeriod": 31,
        "Name": "comm_cmp_canary_code",
        "RunConfig": Object {
          "MemoryInMB": 3008,
          "TimeoutInSeconds": 60,
        },
        "RuntimeVersion": "syn-nodejs-puppeteer-7.0",
        "Schedule": Object {
          "DurationInSeconds": "1800",
          "Expression": "rate(1 minute)",
        },
        "StartCanaryAfterCreation": true,
        "SuccessRetentionPeriod": 7,
        "Tags": Array [
          Object {
            "Key": "BuildId",
            "Value": Object {
              "Ref": "BuildId",
            },
          },
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::Synthetics::Canary",
    },
    "Role1ABCC5F0": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "CloudWatch Synthetics lambda execution role for running canaries",
        "ManagedPolicyArns": Array [
          "arn:aws:iam::aws:policy/CloudWatchSyntheticsFullAccess",
        ],
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "s3:PutObject",
                    "s3:GetObject",
                    "s3:GetBucketLocation",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:aws:s3:::cw-syn-canary-",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        "-ap-southeast-2/*",
                      ],
                    ],
                  },
                },
                Object {
                  "Action": Array [
                    "s3:PutObject",
                    "s3:GetObject",
                    "s3:GetBucketLocation",
                    "s3:DeleteObject",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:aws:s3:::cw-syn-results-",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        "-ap-southeast-2/*",
                      ],
                    ],
                  },
                },
                Object {
                  "Action": Array [
                    "logs:CreateLogStream",
                    "logs:PutLogEvents",
                    "logs:CreateLogGroup",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:aws:logs:ap-southeast-2:",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        ":log-group:/aws/lambda/cwsyn-comm_cmp_canary_code-*",
                      ],
                    ],
                  },
                },
                Object {
                  "Action": Array [
                    "s3:ListAllMyBuckets",
                    "xray:PutTraceSegments",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
                Object {
                  "Action": "cloudwatch:PutMetricData",
                  "Condition": Object {
                    "StringEquals": Object {
                      "cloudwatch:namespace": "CloudWatchSynthetics",
                    },
                  },
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "PolicyDocument",
          },
        ],
        "RoleName": "CloudWatchSyntheticsRole-comm_cmp_canary_code-ap-southeast-2",
        "Tags": Array [
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "SubscriptionCODEapsoutheast21E1B4D9D": Object {
      "Properties": Object {
        "Endpoint": "commercial.canaries+CODE-ap-southeast-2@guardian.co.uk",
        "Protocol": "email",
        "Region": "ap-southeast-2",
        "TopicArn": Object {
          "Ref": "TopicCODEapsoutheast2E8902FA1",
        },
      },
      "Type": "AWS::SNS::Subscription",
    },
    "TopicCODEapsoutheast2E8902FA1": Object {
      "Properties": Object {
        "Tags": Array [
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::SNS::Topic",
    },
  },
}
`;

exports[`The CommercialCanaries stack matches the Australia PROD snapshot 1`] = `
Object {
  "Metadata": Object {
    "gu:cdk:constructs": Array [],
    "gu:cdk:version": "TEST",
  },
  "Parameters": Object {
    "BuildId": Object {
      "Description": "The riff-raff build id, automatically generated and provided by riff-raff",
      "Type": "String",
    },
  },
  "Resources": Object {
    "AlarmPROD8A842476": Object {
      "Properties": Object {
        "ActionsEnabled": true,
        "AlarmActions": Array [
          Object {
            "Ref": "TopicPRODapsoutheast2108028D5",
          },
        ],
        "AlarmDescription": "Either a Front or an Article CMP has failed in ap-southeast-2",
        "AlarmName": "commercial-canary-PROD-ap-southeast-2",
        "ComparisonOperator": "LessThanOrEqualToThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": Array [
          Object {
            "Name": "CanaryName",
            "Value": "comm_cmp_canary_prod",
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "SuccessPercent",
        "Namespace": "CloudWatchSynthetics",
        "OKActions": Array [
          Object {
            "Ref": "TopicPRODapsoutheast2108028D5",
          },
        ],
        "Period": 60,
        "Statistic": "Average",
        "Threshold": 80,
        "TreatMissingData": "breaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "Canary": Object {
      "Properties": Object {
        "ArtifactS3Location": Object {
          "Fn::Join": Array [
            "",
            Array [
              "s3://cw-syn-results-",
              Object {
                "Ref": "AWS::AccountId",
              },
              "-ap-southeast-2/PROD",
            ],
          ],
        },
        "Code": Object {
          "Handler": "pageLoadBlueprint.handler",
          "S3Bucket": Object {
            "Fn::Join": Array [
              "",
              Array [
                "cw-syn-canary-",
                Object {
                  "Ref": "AWS::AccountId",
                },
                "-ap-southeast-2",
              ],
            ],
          },
          "S3Key": "PROD/nodejs.zip",
        },
        "DeleteLambdaResourcesOnCanaryDeletion": true,
        "ExecutionRoleArn": Object {
          "Fn::GetAtt": Array [
            "Role1ABCC5F0",
            "Arn",
          ],
        },
        "FailureRetentionPeriod": 31,
        "Name": "comm_cmp_canary_prod",
        "RunConfig": Object {
          "MemoryInMB": 3008,
          "TimeoutInSeconds": 60,
        },
        "RuntimeVersion": "syn-nodejs-puppeteer-7.0",
        "Schedule": Object {
          "DurationInSeconds": "0",
          "Expression": "rate(1 minute)",
        },
        "StartCanaryAfterCreation": true,
        "SuccessRetentionPeriod": 7,
        "Tags": Array [
          Object {
            "Key": "BuildId",
            "Value": Object {
              "Ref": "BuildId",
            },
          },
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::Synthetics::Canary",
    },
    "Role1ABCC5F0": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "CloudWatch Synthetics lambda execution role for running canaries",
        "ManagedPolicyArns": Array [
          "arn:aws:iam::aws:policy/CloudWatchSyntheticsFullAccess",
        ],
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "s3:PutObject",
                    "s3:GetObject",
                    "s3:GetBucketLocation",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:aws:s3:::cw-syn-canary-",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        "-ap-southeast-2/*",
                      ],
                    ],
                  },
                },
                Object {
                  "Action": Array [
                    "s3:PutObject",
                    "s3:GetObject",
                    "s3:GetBucketLocation",
                    "s3:DeleteObject",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:aws:s3:::cw-syn-results-",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        "-ap-southeast-2/*",
                      ],
                    ],
                  },
                },
                Object {
                  "Action": Array [
                    "logs:CreateLogStream",
                    "logs:PutLogEvents",
                    "logs:CreateLogGroup",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:aws:logs:ap-southeast-2:",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        ":log-group:/aws/lambda/cwsyn-comm_cmp_canary_prod-*",
                      ],
                    ],
                  },
                },
                Object {
                  "Action": Array [
                    "s3:ListAllMyBuckets",
                    "xray:PutTraceSegments",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
                Object {
                  "Action": "cloudwatch:PutMetricData",
                  "Condition": Object {
                    "StringEquals": Object {
                      "cloudwatch:namespace": "CloudWatchSynthetics",
                    },
                  },
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "PolicyDocument",
          },
        ],
        "RoleName": "CloudWatchSyntheticsRole-comm_cmp_canary_prod-ap-southeast-2",
        "Tags": Array [
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "SubscriptionPRODapsoutheast241550A69": Object {
      "Properties": Object {
        "Endpoint": "commercial.canaries+PROD-ap-southeast-2@guardian.co.uk",
        "Protocol": "email",
        "Region": "ap-southeast-2",
        "TopicArn": Object {
          "Ref": "TopicPRODapsoutheast2108028D5",
        },
      },
      "Type": "AWS::SNS::Subscription",
    },
    "TopicPRODapsoutheast2108028D5": Object {
      "Properties": Object {
        "Tags": Array [
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::SNS::Topic",
    },
  },
}
`;

exports[`The CommercialCanaries stack matches the Canada CODE snapshot 1`] = `
Object {
  "Metadata": Object {
    "gu:cdk:constructs": Array [],
    "gu:cdk:version": "TEST",
  },
  "Parameters": Object {
    "BuildId": Object {
      "Description": "The riff-raff build id, automatically generated and provided by riff-raff",
      "Type": "String",
    },
  },
  "Resources": Object {
    "AlarmCODE09E73206": Object {
      "Properties": Object {
        "ActionsEnabled": true,
        "AlarmActions": Array [
          Object {
            "Ref": "TopicCODEcacentral1CD569A70",
          },
        ],
        "AlarmDescription": "Either a Front or an Article CMP has failed in ca-central-1",
        "AlarmName": "commercial-canary-CODE-ca-central-1",
        "ComparisonOperator": "LessThanOrEqualToThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": Array [
          Object {
            "Name": "CanaryName",
            "Value": "comm_cmp_canary_code",
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "SuccessPercent",
        "Namespace": "CloudWatchSynthetics",
        "OKActions": Array [
          Object {
            "Ref": "TopicCODEcacentral1CD569A70",
          },
        ],
        "Period": 60,
        "Statistic": "Average",
        "Threshold": 80,
        "TreatMissingData": "breaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "Canary": Object {
      "Properties": Object {
        "ArtifactS3Location": Object {
          "Fn::Join": Array [
            "",
            Array [
              "s3://cw-syn-results-",
              Object {
                "Ref": "AWS::AccountId",
              },
              "-ca-central-1/CODE",
            ],
          ],
        },
        "Code": Object {
          "Handler": "pageLoadBlueprint.handler",
          "S3Bucket": Object {
            "Fn::Join": Array [
              "",
              Array [
                "cw-syn-canary-",
                Object {
                  "Ref": "AWS::AccountId",
                },
                "-ca-central-1",
              ],
            ],
          },
          "S3Key": "CODE/nodejs.zip",
        },
        "DeleteLambdaResourcesOnCanaryDeletion": true,
        "ExecutionRoleArn": Object {
          "Fn::GetAtt": Array [
            "Role1ABCC5F0",
            "Arn",
          ],
        },
        "FailureRetentionPeriod": 31,
        "Name": "comm_cmp_canary_code",
        "RunConfig": Object {
          "MemoryInMB": 2048,
          "TimeoutInSeconds": 60,
        },
        "RuntimeVersion": "syn-nodejs-puppeteer-7.0",
        "Schedule": Object {
          "DurationInSeconds": "1800",
          "Expression": "rate(1 minute)",
        },
        "StartCanaryAfterCreation": true,
        "SuccessRetentionPeriod": 7,
        "Tags": Array [
          Object {
            "Key": "BuildId",
            "Value": Object {
              "Ref": "BuildId",
            },
          },
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::Synthetics::Canary",
    },
    "Role1ABCC5F0": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "CloudWatch Synthetics lambda execution role for running canaries",
        "ManagedPolicyArns": Array [
          "arn:aws:iam::aws:policy/CloudWatchSyntheticsFullAccess",
        ],
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "s3:PutObject",
                    "s3:GetObject",
                    "s3:GetBucketLocation",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:aws:s3:::cw-syn-canary-",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        "-ca-central-1/*",
                      ],
                    ],
                  },
                },
                Object {
                  "Action": Array [
                    "s3:PutObject",
                    "s3:GetObject",
                    "s3:GetBucketLocation",
                    "s3:DeleteObject",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:aws:s3:::cw-syn-results-",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        "-ca-central-1/*",
                      ],
                    ],
                  },
                },
                Object {
                  "Action": Array [
                    "logs:CreateLogStream",
                    "logs:PutLogEvents",
                    "logs:CreateLogGroup",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:aws:logs:ca-central-1:",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        ":log-group:/aws/lambda/cwsyn-comm_cmp_canary_code-*",
                      ],
                    ],
                  },
                },
                Object {
                  "Action": Array [
                    "s3:ListAllMyBuckets",
                    "xray:PutTraceSegments",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
                Object {
                  "Action": "cloudwatch:PutMetricData",
                  "Condition": Object {
                    "StringEquals": Object {
                      "cloudwatch:namespace": "CloudWatchSynthetics",
                    },
                  },
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "PolicyDocument",
          },
        ],
        "RoleName": "CloudWatchSyntheticsRole-comm_cmp_canary_code-ca-central-1",
        "Tags": Array [
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "SubscriptionCODEcacentral1443D4638": Object {
      "Properties": Object {
        "Endpoint": "commercial.canaries+CODE-ca-central-1@guardian.co.uk",
        "Protocol": "email",
        "Region": "ca-central-1",
        "TopicArn": Object {
          "Ref": "TopicCODEcacentral1CD569A70",
        },
      },
      "Type": "AWS::SNS::Subscription",
    },
    "TopicCODEcacentral1CD569A70": Object {
      "Properties": Object {
        "Tags": Array [
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::SNS::Topic",
    },
  },
}
`;

exports[`The CommercialCanaries stack matches the Canada PROD snapshot 1`] = `
Object {
  "Metadata": Object {
    "gu:cdk:constructs": Array [],
    "gu:cdk:version": "TEST",
  },
  "Parameters": Object {
    "BuildId": Object {
      "Description": "The riff-raff build id, automatically generated and provided by riff-raff",
      "Type": "String",
    },
  },
  "Resources": Object {
    "AlarmPROD8A842476": Object {
      "Properties": Object {
        "ActionsEnabled": true,
        "AlarmActions": Array [
          Object {
            "Ref": "TopicPRODcacentral14C91E7FF",
          },
        ],
        "AlarmDescription": "Either a Front or an Article CMP has failed in ca-central-1",
        "AlarmName": "commercial-canary-PROD-ca-central-1",
        "ComparisonOperator": "LessThanOrEqualToThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": Array [
          Object {
            "Name": "CanaryName",
            "Value": "comm_cmp_canary_prod",
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "SuccessPercent",
        "Namespace": "CloudWatchSynthetics",
        "OKActions": Array [
          Object {
            "Ref": "TopicPRODcacentral14C91E7FF",
          },
        ],
        "Period": 60,
        "Statistic": "Average",
        "Threshold": 80,
        "TreatMissingData": "breaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "Canary": Object {
      "Properties": Object {
        "ArtifactS3Location": Object {
          "Fn::Join": Array [
            "",
            Array [
              "s3://cw-syn-results-",
              Object {
                "Ref": "AWS::AccountId",
              },
              "-ca-central-1/PROD",
            ],
          ],
        },
        "Code": Object {
          "Handler": "pageLoadBlueprint.handler",
          "S3Bucket": Object {
            "Fn::Join": Array [
              "",
              Array [
                "cw-syn-canary-",
                Object {
                  "Ref": "AWS::AccountId",
                },
                "-ca-central-1",
              ],
            ],
          },
          "S3Key": "PROD/nodejs.zip",
        },
        "DeleteLambdaResourcesOnCanaryDeletion": true,
        "ExecutionRoleArn": Object {
          "Fn::GetAtt": Array [
            "Role1ABCC5F0",
            "Arn",
          ],
        },
        "FailureRetentionPeriod": 31,
        "Name": "comm_cmp_canary_prod",
        "RunConfig": Object {
          "MemoryInMB": 2048,
          "TimeoutInSeconds": 60,
        },
        "RuntimeVersion": "syn-nodejs-puppeteer-7.0",
        "Schedule": Object {
          "DurationInSeconds": "0",
          "Expression": "rate(1 minute)",
        },
        "StartCanaryAfterCreation": true,
        "SuccessRetentionPeriod": 7,
        "Tags": Array [
          Object {
            "Key": "BuildId",
            "Value": Object {
              "Ref": "BuildId",
            },
          },
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::Synthetics::Canary",
    },
    "Role1ABCC5F0": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "CloudWatch Synthetics lambda execution role for running canaries",
        "ManagedPolicyArns": Array [
          "arn:aws:iam::aws:policy/CloudWatchSyntheticsFullAccess",
        ],
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "s3:PutObject",
                    "s3:GetObject",
                    "s3:GetBucketLocation",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:aws:s3:::cw-syn-canary-",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        "-ca-central-1/*",
                      ],
                    ],
                  },
                },
                Object {
                  "Action": Array [
                    "s3:PutObject",
                    "s3:GetObject",
                    "s3:GetBucketLocation",
                    "s3:DeleteObject",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:aws:s3:::cw-syn-results-",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        "-ca-central-1/*",
                      ],
                    ],
                  },
                },
                Object {
                  "Action": Array [
                    "logs:CreateLogStream",
                    "logs:PutLogEvents",
                    "logs:CreateLogGroup",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:aws:logs:ca-central-1:",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        ":log-group:/aws/lambda/cwsyn-comm_cmp_canary_prod-*",
                      ],
                    ],
                  },
                },
                Object {
                  "Action": Array [
                    "s3:ListAllMyBuckets",
                    "xray:PutTraceSegments",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
                Object {
                  "Action": "cloudwatch:PutMetricData",
                  "Condition": Object {
                    "StringEquals": Object {
                      "cloudwatch:namespace": "CloudWatchSynthetics",
                    },
                  },
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "PolicyDocument",
          },
        ],
        "RoleName": "CloudWatchSyntheticsRole-comm_cmp_canary_prod-ca-central-1",
        "Tags": Array [
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "SubscriptionPRODcacentral1485BD312": Object {
      "Properties": Object {
        "Endpoint": "commercial.canaries+PROD-ca-central-1@guardian.co.uk",
        "Protocol": "email",
        "Region": "ca-central-1",
        "TopicArn": Object {
          "Ref": "TopicPRODcacentral14C91E7FF",
        },
      },
      "Type": "AWS::SNS::Subscription",
    },
    "TopicPRODcacentral14C91E7FF": Object {
      "Properties": Object {
        "Tags": Array [
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::SNS::Topic",
    },
  },
}
`;

exports[`The CommercialCanaries stack matches the UK CODE snapshot 1`] = `
Object {
  "Metadata": Object {
    "gu:cdk:constructs": Array [],
    "gu:cdk:version": "TEST",
  },
  "Parameters": Object {
    "BuildId": Object {
      "Description": "The riff-raff build id, automatically generated and provided by riff-raff",
      "Type": "String",
    },
  },
  "Resources": Object {
    "AlarmCODE09E73206": Object {
      "Properties": Object {
        "ActionsEnabled": true,
        "AlarmActions": Array [
          Object {
            "Ref": "TopicCODEeuwest18E4F95DD",
          },
        ],
        "AlarmDescription": "Either a Front or an Article CMP has failed in eu-west-1",
        "AlarmName": "commercial-canary-CODE-eu-west-1",
        "ComparisonOperator": "LessThanOrEqualToThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": Array [
          Object {
            "Name": "CanaryName",
            "Value": "comm_cmp_canary_code",
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "SuccessPercent",
        "Namespace": "CloudWatchSynthetics",
        "OKActions": Array [
          Object {
            "Ref": "TopicCODEeuwest18E4F95DD",
          },
        ],
        "Period": 60,
        "Statistic": "Average",
        "Threshold": 80,
        "TreatMissingData": "breaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "Canary": Object {
      "Properties": Object {
        "ArtifactS3Location": Object {
          "Fn::Join": Array [
            "",
            Array [
              "s3://cw-syn-results-",
              Object {
                "Ref": "AWS::AccountId",
              },
              "-eu-west-1/CODE",
            ],
          ],
        },
        "Code": Object {
          "Handler": "pageLoadBlueprint.handler",
          "S3Bucket": Object {
            "Fn::Join": Array [
              "",
              Array [
                "cw-syn-canary-",
                Object {
                  "Ref": "AWS::AccountId",
                },
                "-eu-west-1",
              ],
            ],
          },
          "S3Key": "CODE/nodejs.zip",
        },
        "DeleteLambdaResourcesOnCanaryDeletion": true,
        "ExecutionRoleArn": Object {
          "Fn::GetAtt": Array [
            "Role1ABCC5F0",
            "Arn",
          ],
        },
        "FailureRetentionPeriod": 31,
        "Name": "comm_cmp_canary_code",
        "RunConfig": Object {
          "MemoryInMB": 2048,
          "TimeoutInSeconds": 60,
        },
        "RuntimeVersion": "syn-nodejs-puppeteer-7.0",
        "Schedule": Object {
          "DurationInSeconds": "1800",
          "Expression": "rate(1 minute)",
        },
        "StartCanaryAfterCreation": true,
        "SuccessRetentionPeriod": 7,
        "Tags": Array [
          Object {
            "Key": "BuildId",
            "Value": Object {
              "Ref": "BuildId",
            },
          },
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::Synthetics::Canary",
    },
    "Role1ABCC5F0": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "CloudWatch Synthetics lambda execution role for running canaries",
        "ManagedPolicyArns": Array [
          "arn:aws:iam::aws:policy/CloudWatchSyntheticsFullAccess",
        ],
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "s3:PutObject",
                    "s3:GetObject",
                    "s3:GetBucketLocation",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:aws:s3:::cw-syn-canary-",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        "-eu-west-1/*",
                      ],
                    ],
                  },
                },
                Object {
                  "Action": Array [
                    "s3:PutObject",
                    "s3:GetObject",
                    "s3:GetBucketLocation",
                    "s3:DeleteObject",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:aws:s3:::cw-syn-results-",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        "-eu-west-1/*",
                      ],
                    ],
                  },
                },
                Object {
                  "Action": Array [
                    "logs:CreateLogStream",
                    "logs:PutLogEvents",
                    "logs:CreateLogGroup",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:aws:logs:eu-west-1:",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        ":log-group:/aws/lambda/cwsyn-comm_cmp_canary_code-*",
                      ],
                    ],
                  },
                },
                Object {
                  "Action": Array [
                    "s3:ListAllMyBuckets",
                    "xray:PutTraceSegments",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
                Object {
                  "Action": "cloudwatch:PutMetricData",
                  "Condition": Object {
                    "StringEquals": Object {
                      "cloudwatch:namespace": "CloudWatchSynthetics",
                    },
                  },
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "PolicyDocument",
          },
        ],
        "RoleName": "CloudWatchSyntheticsRole-comm_cmp_canary_code-eu-west-1",
        "Tags": Array [
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "SubscriptionCODEeuwest1D9A99453": Object {
      "Properties": Object {
        "Endpoint": "commercial.canaries+CODE-eu-west-1@guardian.co.uk",
        "Protocol": "email",
        "Region": "eu-west-1",
        "TopicArn": Object {
          "Ref": "TopicCODEeuwest18E4F95DD",
        },
      },
      "Type": "AWS::SNS::Subscription",
    },
    "TopicCODEeuwest18E4F95DD": Object {
      "Properties": Object {
        "Tags": Array [
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::SNS::Topic",
    },
  },
}
`;

exports[`The CommercialCanaries stack matches the UK PROD snapshot 1`] = `
Object {
  "Metadata": Object {
    "gu:cdk:constructs": Array [],
    "gu:cdk:version": "TEST",
  },
  "Parameters": Object {
    "BuildId": Object {
      "Description": "The riff-raff build id, automatically generated and provided by riff-raff",
      "Type": "String",
    },
  },
  "Resources": Object {
    "AlarmPROD8A842476": Object {
      "Properties": Object {
        "ActionsEnabled": true,
        "AlarmActions": Array [
          Object {
            "Ref": "TopicPRODeuwest132F1B0C5",
          },
        ],
        "AlarmDescription": "Either a Front or an Article CMP has failed in eu-west-1",
        "AlarmName": "commercial-canary-PROD-eu-west-1",
        "ComparisonOperator": "LessThanOrEqualToThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": Array [
          Object {
            "Name": "CanaryName",
            "Value": "comm_cmp_canary_prod",
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "SuccessPercent",
        "Namespace": "CloudWatchSynthetics",
        "OKActions": Array [
          Object {
            "Ref": "TopicPRODeuwest132F1B0C5",
          },
        ],
        "Period": 60,
        "Statistic": "Average",
        "Threshold": 80,
        "TreatMissingData": "breaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "Canary": Object {
      "Properties": Object {
        "ArtifactS3Location": Object {
          "Fn::Join": Array [
            "",
            Array [
              "s3://cw-syn-results-",
              Object {
                "Ref": "AWS::AccountId",
              },
              "-eu-west-1/PROD",
            ],
          ],
        },
        "Code": Object {
          "Handler": "pageLoadBlueprint.handler",
          "S3Bucket": Object {
            "Fn::Join": Array [
              "",
              Array [
                "cw-syn-canary-",
                Object {
                  "Ref": "AWS::AccountId",
                },
                "-eu-west-1",
              ],
            ],
          },
          "S3Key": "PROD/nodejs.zip",
        },
        "DeleteLambdaResourcesOnCanaryDeletion": true,
        "ExecutionRoleArn": Object {
          "Fn::GetAtt": Array [
            "Role1ABCC5F0",
            "Arn",
          ],
        },
        "FailureRetentionPeriod": 31,
        "Name": "comm_cmp_canary_prod",
        "RunConfig": Object {
          "MemoryInMB": 2048,
          "TimeoutInSeconds": 60,
        },
        "RuntimeVersion": "syn-nodejs-puppeteer-7.0",
        "Schedule": Object {
          "DurationInSeconds": "0",
          "Expression": "rate(1 minute)",
        },
        "StartCanaryAfterCreation": true,
        "SuccessRetentionPeriod": 7,
        "Tags": Array [
          Object {
            "Key": "BuildId",
            "Value": Object {
              "Ref": "BuildId",
            },
          },
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::Synthetics::Canary",
    },
    "Role1ABCC5F0": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "CloudWatch Synthetics lambda execution role for running canaries",
        "ManagedPolicyArns": Array [
          "arn:aws:iam::aws:policy/CloudWatchSyntheticsFullAccess",
        ],
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "s3:PutObject",
                    "s3:GetObject",
                    "s3:GetBucketLocation",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:aws:s3:::cw-syn-canary-",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        "-eu-west-1/*",
                      ],
                    ],
                  },
                },
                Object {
                  "Action": Array [
                    "s3:PutObject",
                    "s3:GetObject",
                    "s3:GetBucketLocation",
                    "s3:DeleteObject",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:aws:s3:::cw-syn-results-",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        "-eu-west-1/*",
                      ],
                    ],
                  },
                },
                Object {
                  "Action": Array [
                    "logs:CreateLogStream",
                    "logs:PutLogEvents",
                    "logs:CreateLogGroup",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:aws:logs:eu-west-1:",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        ":log-group:/aws/lambda/cwsyn-comm_cmp_canary_prod-*",
                      ],
                    ],
                  },
                },
                Object {
                  "Action": Array [
                    "s3:ListAllMyBuckets",
                    "xray:PutTraceSegments",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
                Object {
                  "Action": "cloudwatch:PutMetricData",
                  "Condition": Object {
                    "StringEquals": Object {
                      "cloudwatch:namespace": "CloudWatchSynthetics",
                    },
                  },
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "PolicyDocument",
          },
        ],
        "RoleName": "CloudWatchSyntheticsRole-comm_cmp_canary_prod-eu-west-1",
        "Tags": Array [
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "SubscriptionPRODeuwest18472BFD2": Object {
      "Properties": Object {
        "Endpoint": "commercial.canaries+PROD-eu-west-1@guardian.co.uk",
        "Protocol": "email",
        "Region": "eu-west-1",
        "TopicArn": Object {
          "Ref": "TopicPRODeuwest132F1B0C5",
        },
      },
      "Type": "AWS::SNS::Subscription",
    },
    "TopicPRODeuwest132F1B0C5": Object {
      "Properties": Object {
        "Tags": Array [
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::SNS::Topic",
    },
  },
}
`;

exports[`The CommercialCanaries stack matches the US CODE snapshot 1`] = `
Object {
  "Metadata": Object {
    "gu:cdk:constructs": Array [],
    "gu:cdk:version": "TEST",
  },
  "Parameters": Object {
    "BuildId": Object {
      "Description": "The riff-raff build id, automatically generated and provided by riff-raff",
      "Type": "String",
    },
  },
  "Resources": Object {
    "AlarmCODE09E73206": Object {
      "Properties": Object {
        "ActionsEnabled": true,
        "AlarmActions": Array [
          Object {
            "Ref": "TopicCODEuswest1BCC7F1D9",
          },
        ],
        "AlarmDescription": "Either a Front or an Article CMP has failed in us-west-1",
        "AlarmName": "commercial-canary-CODE-us-west-1",
        "ComparisonOperator": "LessThanOrEqualToThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": Array [
          Object {
            "Name": "CanaryName",
            "Value": "comm_cmp_canary_code",
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "SuccessPercent",
        "Namespace": "CloudWatchSynthetics",
        "OKActions": Array [
          Object {
            "Ref": "TopicCODEuswest1BCC7F1D9",
          },
        ],
        "Period": 60,
        "Statistic": "Average",
        "Threshold": 80,
        "TreatMissingData": "breaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "Canary": Object {
      "Properties": Object {
        "ArtifactS3Location": Object {
          "Fn::Join": Array [
            "",
            Array [
              "s3://cw-syn-results-",
              Object {
                "Ref": "AWS::AccountId",
              },
              "-us-west-1/CODE",
            ],
          ],
        },
        "Code": Object {
          "Handler": "pageLoadBlueprint.handler",
          "S3Bucket": Object {
            "Fn::Join": Array [
              "",
              Array [
                "cw-syn-canary-",
                Object {
                  "Ref": "AWS::AccountId",
                },
                "-us-west-1",
              ],
            ],
          },
          "S3Key": "CODE/nodejs.zip",
        },
        "DeleteLambdaResourcesOnCanaryDeletion": true,
        "ExecutionRoleArn": Object {
          "Fn::GetAtt": Array [
            "Role1ABCC5F0",
            "Arn",
          ],
        },
        "FailureRetentionPeriod": 31,
        "Name": "comm_cmp_canary_code",
        "RunConfig": Object {
          "MemoryInMB": 3008,
          "TimeoutInSeconds": 60,
        },
        "RuntimeVersion": "syn-nodejs-puppeteer-7.0",
        "Schedule": Object {
          "DurationInSeconds": "1800",
          "Expression": "rate(1 minute)",
        },
        "StartCanaryAfterCreation": true,
        "SuccessRetentionPeriod": 7,
        "Tags": Array [
          Object {
            "Key": "BuildId",
            "Value": Object {
              "Ref": "BuildId",
            },
          },
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::Synthetics::Canary",
    },
    "Role1ABCC5F0": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "CloudWatch Synthetics lambda execution role for running canaries",
        "ManagedPolicyArns": Array [
          "arn:aws:iam::aws:policy/CloudWatchSyntheticsFullAccess",
        ],
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "s3:PutObject",
                    "s3:GetObject",
                    "s3:GetBucketLocation",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:aws:s3:::cw-syn-canary-",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        "-us-west-1/*",
                      ],
                    ],
                  },
                },
                Object {
                  "Action": Array [
                    "s3:PutObject",
                    "s3:GetObject",
                    "s3:GetBucketLocation",
                    "s3:DeleteObject",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:aws:s3:::cw-syn-results-",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        "-us-west-1/*",
                      ],
                    ],
                  },
                },
                Object {
                  "Action": Array [
                    "logs:CreateLogStream",
                    "logs:PutLogEvents",
                    "logs:CreateLogGroup",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:aws:logs:us-west-1:",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        ":log-group:/aws/lambda/cwsyn-comm_cmp_canary_code-*",
                      ],
                    ],
                  },
                },
                Object {
                  "Action": Array [
                    "s3:ListAllMyBuckets",
                    "xray:PutTraceSegments",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
                Object {
                  "Action": "cloudwatch:PutMetricData",
                  "Condition": Object {
                    "StringEquals": Object {
                      "cloudwatch:namespace": "CloudWatchSynthetics",
                    },
                  },
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "PolicyDocument",
          },
        ],
        "RoleName": "CloudWatchSyntheticsRole-comm_cmp_canary_code-us-west-1",
        "Tags": Array [
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "SubscriptionCODEuswest176FCF696": Object {
      "Properties": Object {
        "Endpoint": "commercial.canaries+CODE-us-west-1@guardian.co.uk",
        "Protocol": "email",
        "Region": "us-west-1",
        "TopicArn": Object {
          "Ref": "TopicCODEuswest1BCC7F1D9",
        },
      },
      "Type": "AWS::SNS::Subscription",
    },
    "TopicCODEuswest1BCC7F1D9": Object {
      "Properties": Object {
        "Tags": Array [
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::SNS::Topic",
    },
  },
}
`;

exports[`The CommercialCanaries stack matches the US PROD snapshot 1`] = `
Object {
  "Metadata": Object {
    "gu:cdk:constructs": Array [],
    "gu:cdk:version": "TEST",
  },
  "Parameters": Object {
    "BuildId": Object {
      "Description": "The riff-raff build id, automatically generated and provided by riff-raff",
      "Type": "String",
    },
  },
  "Resources": Object {
    "AlarmPROD8A842476": Object {
      "Properties": Object {
        "ActionsEnabled": true,
        "AlarmActions": Array [
          Object {
            "Ref": "TopicPRODuswest13F6F85C0",
          },
        ],
        "AlarmDescription": "Either a Front or an Article CMP has failed in us-west-1",
        "AlarmName": "commercial-canary-PROD-us-west-1",
        "ComparisonOperator": "LessThanOrEqualToThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": Array [
          Object {
            "Name": "CanaryName",
            "Value": "comm_cmp_canary_prod",
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "SuccessPercent",
        "Namespace": "CloudWatchSynthetics",
        "OKActions": Array [
          Object {
            "Ref": "TopicPRODuswest13F6F85C0",
          },
        ],
        "Period": 60,
        "Statistic": "Average",
        "Threshold": 80,
        "TreatMissingData": "breaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "Canary": Object {
      "Properties": Object {
        "ArtifactS3Location": Object {
          "Fn::Join": Array [
            "",
            Array [
              "s3://cw-syn-results-",
              Object {
                "Ref": "AWS::AccountId",
              },
              "-us-west-1/PROD",
            ],
          ],
        },
        "Code": Object {
          "Handler": "pageLoadBlueprint.handler",
          "S3Bucket": Object {
            "Fn::Join": Array [
              "",
              Array [
                "cw-syn-canary-",
                Object {
                  "Ref": "AWS::AccountId",
                },
                "-us-west-1",
              ],
            ],
          },
          "S3Key": "PROD/nodejs.zip",
        },
        "DeleteLambdaResourcesOnCanaryDeletion": true,
        "ExecutionRoleArn": Object {
          "Fn::GetAtt": Array [
            "Role1ABCC5F0",
            "Arn",
          ],
        },
        "FailureRetentionPeriod": 31,
        "Name": "comm_cmp_canary_prod",
        "RunConfig": Object {
          "MemoryInMB": 3008,
          "TimeoutInSeconds": 60,
        },
        "RuntimeVersion": "syn-nodejs-puppeteer-7.0",
        "Schedule": Object {
          "DurationInSeconds": "0",
          "Expression": "rate(1 minute)",
        },
        "StartCanaryAfterCreation": true,
        "SuccessRetentionPeriod": 7,
        "Tags": Array [
          Object {
            "Key": "BuildId",
            "Value": Object {
              "Ref": "BuildId",
            },
          },
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::Synthetics::Canary",
    },
    "Role1ABCC5F0": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "CloudWatch Synthetics lambda execution role for running canaries",
        "ManagedPolicyArns": Array [
          "arn:aws:iam::aws:policy/CloudWatchSyntheticsFullAccess",
        ],
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "s3:PutObject",
                    "s3:GetObject",
                    "s3:GetBucketLocation",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:aws:s3:::cw-syn-canary-",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        "-us-west-1/*",
                      ],
                    ],
                  },
                },
                Object {
                  "Action": Array [
                    "s3:PutObject",
                    "s3:GetObject",
                    "s3:GetBucketLocation",
                    "s3:DeleteObject",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:aws:s3:::cw-syn-results-",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        "-us-west-1/*",
                      ],
                    ],
                  },
                },
                Object {
                  "Action": Array [
                    "logs:CreateLogStream",
                    "logs:PutLogEvents",
                    "logs:CreateLogGroup",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:aws:logs:us-west-1:",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        ":log-group:/aws/lambda/cwsyn-comm_cmp_canary_prod-*",
                      ],
                    ],
                  },
                },
                Object {
                  "Action": Array [
                    "s3:ListAllMyBuckets",
                    "xray:PutTraceSegments",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
                Object {
                  "Action": "cloudwatch:PutMetricData",
                  "Condition": Object {
                    "StringEquals": Object {
                      "cloudwatch:namespace": "CloudWatchSynthetics",
                    },
                  },
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "PolicyDocument",
          },
        ],
        "RoleName": "CloudWatchSyntheticsRole-comm_cmp_canary_prod-us-west-1",
        "Tags": Array [
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "SubscriptionPRODuswest1F1008298": Object {
      "Properties": Object {
        "Endpoint": "commercial.canaries+PROD-us-west-1@guardian.co.uk",
        "Protocol": "email",
        "Region": "us-west-1",
        "TopicArn": Object {
          "Ref": "TopicPRODuswest13F6F85C0",
        },
      },
      "Type": "AWS::SNS::Subscription",
    },
    "TopicPRODuswest13F6F85C0": Object {
      "Properties": Object {
        "Tags": Array [
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::SNS::Topic",
    },
  },
}
`;
